plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.22'
    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.22'
}

allprojects {
    repositories {
        mavenCentral()
        maven {
            url "https://reposilite.tiktzuki.com/releases"
        }
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_21
    }
}

subprojects {
    apply plugin: "java-library"
    apply plugin: "org.jetbrains.kotlin.jvm"
    apply plugin: "org.jetbrains.kotlin.plugin.spring"
    apply plugin: "org.jetbrains.kotlin.plugin.jpa"
    apply plugin: "org.springframework.boot"
    apply plugin: "io.spring.dependency-management"
}

apply from: "$rootDir/room-manager/build.gradle"

test {
    useJUnitPlatform()
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
